# krisp

./: .gitignore  .project  .pydevproject  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
krisp/: Amplicon.py  filterAlignments.py  krisp.py  outputAlignments.py  shared.py
krisp/krisp_fasta/: krisp_fasta.py
krisp/krisp_vcf/: find_diag_var.py  print_align.py
krisp/kstream/: kstream.py
misc_scripts/: annotate.py  ex_data_for_mireia.py  grepFastaSequence.py
scratch/: demo.py
src/diagvar/: diagvar_cmd.py  find_diag_region.py  find_diag_var.py  old_code.py  print_align.py
src/krisp/: Amplicon.py  intersectAmplicons.py  krisp.py  outputAlignments.py  shared.py
src/krisp/krisp_fasta/: Amplicon.py  filterAlignments.py  outputAlignments.py
src/krisp/krisp_vcf/: find_diag_var.py  krisp_vcf.py
src/krisp_fasta/: Amplicon.py  intersectAmplicons.py  krisp_fasta.py  shared.py
src/krisp_vcf/: find_diag_var.py  krisp_vcf.py  print_align.py  test_find_diag_var.py
src/kstream/: __init__.py  kstream.py
test_data/: .gitignore  PR-102_v3.1.fasta.fai  test_metadata.tsv
test_data/krisp_vcf/: metadata.csv
testdata/: test_DNA.fasta  test_RNA.fasta
tests/: test_find_diag_region.py  test_find_diag_var.py
