[tool.poetry]
name = "krisp"
version = "0.1.6"
description = "A lightweight tool for finding diagnostic regions in whole genome data"
authors = [
    "Zachary S.L. Foster <zacharyfoster1989@gmail.com>",
    "Andrew S. Tupper <andrew.s.tupper@gmail.com>",
    "Niklaus J. Grunwald <niklaus.grunwald@oregonstate.edu>"
]
maintainers = [
    "Zachary S.L. Foster <zacharyfoster1989@gmail.com>",
    "Andrew S. Tupper <andrew.s.tupper@gmail.com>",
    "Niklaus J. Grunwald <niklaus.grunwald@oregonstate.edu>"
]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/grunwaldlab/krisp"
repository = "https://github.com/grunwaldlab/krisp"
documentation = "https://github.com/grunwaldlab/krisp"
keywords = ["genome", "diagnostic", "bioinformatics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = ">=3.10"
pysam = "^0.22.1"
bio = "^1.7.1"
nltk = "^3.9.1"
prettytable = "^3.11.0"
pandas = "^2.2.2"
primer3-py = "^2.0.3"
colorama = "^0.4.6"


[tool.poetry.scripts]
krisp_fasta = "krisp.krisp_fasta.krisp_fasta:main"
kstream = "krisp.kstream.kstream:main"
krisp_vcf = "krisp.krisp_vcf.krisp_vcf:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
