[metadata]
name = krisp
version = 1.0.0
desciption = krisp: A lightweight tool for find CRISPR-diagnostic regions
long_desciption = file: README.md
author = Andrew S. Tupper
author_email = andrew.s.tupper@gmail.com
url = 
classifiers =
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages =
    krisp
    kstream
    diagvar
install_requires =  
python_version >= "3.6"

[options.entry_points]
console_scripts =
    krisp = krisp.krisp:main
    kstream = kstream.kstream:main
    diagvar = diagvar.find_diag_region:main
